# secureot-inventario

./: Cargo.toml  README.md
src/: main.rs
