[package]
name = "network_inventory"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
csv = "1.3"
xlsxwriter = "0.6"
