[package]
name = "secureot-inventario"
version = "0.1.0"
edition = "2021"

[dependencies]
# Para manejar los argumentos de línea de comandos (CLI)
clap = { version = "4.5", features = ["derive"] }

# Para capturar paquetes de red (PCAP)
pcap = "0.11"

# Para manejar fechas y tiempos (timestamps de los paquetes)
chrono = { version = "0.4", features = ["serde"] }

# Para serialización y deserialización de estructuras (JSON, CSV)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Para exportar los resultados a CSV
csv = "1.1"

# Para exportar los resultados a XLSX (requiere dependencias del sistema)
# Si no quieres XLSX, puedes comentar estas líneas.
xlsxwriter = "0.6"

# Para colecciones eficientes
hashbrown = "0.14"
