[package]
name = "secureot-inventario"
version = "0.1.0"
edition = "2021"

[dependencies]
# Para manejar los argumentos de línea de comandos (CLI)
clap = { version = "4.5", features = ["derive"] }

pcap = "0.11"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
xlsxwriter = "0.6"
hashbrown = "0.14"
